@@ -205,6 +205,25 @@ public class UDFContext {
     public boolean isUDFConfEmpty() {
         return udfConfs.isEmpty();
     }
+
+    /**
+     * Convenience method for UDF code to check where it runs (see PIG-2576)
+     * @return
+     */
+    public boolean isFrontend() {
+    	return (this.jconf == null || jconf.get("mapred.task.id") == null);
+    }
+    
+    /**
+     * Make a shallow copy of the context.
+     */
+    public UDFContext clone() {
+    	UDFContext other = new UDFContext();
+    	other.clientSysProps = this.clientSysProps;
+    	other.jconf = this.jconf;
+    	other.udfConfs = this.udfConfs;
+    	return other;
+    }
     
     /**
      * Class that acts as key for hashmap in UDFContext, 
