@@ -3935,6 +3935,21 @@ store E into ':OUTPATH:';\,
                                 STORE B1 INTO ':OUTPATH:.1';
                                 C = DISTINCT B1 ;
                                 store C into ':OUTPATH:.2';?,
+                    }, {
+                        # PIG-2576
+                        'num' => 4,
+                        'execonly' => 'mapred',
+                        'pig' => q?register :FUNCPATH:/testudf.jar;
+                                define printconf org.apache.pig.test.udf.evalfunc.UdfContextFrontend('dummy');
+                                a = load ':INPATH:/singlefile/studenttab10k' as (name, age, gpa);
+                                b = limit a 1;
+                                c = foreach b generate printconf(name);
+	                        store c into ':OUTPATH:';
+                                fs -ls;
+                                ?,
+                        'rc' => 0,
+                        'not_expected_out_regex' => "checkJobConf: conf is null: false",
+                        'expected_out_regex' => "checkJobConf: conf is null: true",
                     }
                 ],
             },{
